<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/parent_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.org.pawpal.custom.CEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/txtfield"
                android:hint="@string/name"
                android:padding="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <com.org.pawpal.custom.CEditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/txtfield"
                android:hint="@string/nickname"
                android:padding="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
            <com.org.pawpal.custom.CEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/txtfield"
                android:hint="@string/email"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
            <com.org.pawpal.custom.CEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/txtfield"
                android:hint="@string/phone"
                android:padding="10dp"
                android:inputType="phone"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
            <com.org.pawpal.custom.CEditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/txtfield"
                android:hint="@string/city"
                android:padding="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
            <com.org.pawpal.custom.CustomTextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:gravity="center_vertical"
                android:background="@mipmap/dropdown"
                android:hint="@string/country"
                android:layout_height="50dp" />
            <com.org.pawpal.custom.CEditText
                android:id="@+id/et_makani_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/txtfield"
                android:hint="@string/makani_number"
                android:padding="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.org.pawpal.custom.CEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@mipmap/txtfield"
                    android:hint="@string/type_address"
                    android:padding="10dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@color/red"
                    android:text="@string/search"
                    android:clickable="true"
                    android:textColor="@color/white" />
            </LinearLayout>
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.org.pawpal.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/location_instructions"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.org.pawpal.custom.CEditText
                    android:id="@+id/et_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@mipmap/txtfield"
                    android:gravity="center"
                    android:hint="@string/latitude"
                    android:padding="5dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <com.org.pawpal.custom.CEditText
                    android:id="@+id/et_longt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@mipmap/txtfield"
                    android:gravity="center"
                    android:hint="@string/longitude"
                    android:padding="5dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />
            </LinearLayout>
            <Button
                android:id="@+id/save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_green_button"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/save"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>