<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@mipmap/horizontal_small_strip" />

        <ImageView
            android:layout_width="68dp"
            android:layout_height="28dp"
            android:layout_gravity="right|center"
            android:src="@mipmap/pp_icon" />

        <com.org.pawpal.custom.CustomTextView
            android:id="@+id/tv_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/create_account"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/step1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/step2_active" />
    </LinearLayout>
    <com.org.pawpal.custom.CustomTextView
        android:id="@+id/tv_step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/step2"
        android:textColor="@color/light_blue_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.org.pawpal.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/confirm_email"
        android:textColor="@color/green_normal"
        android:textSize="18sp"
        android:textStyle="bold" />
    <com.org.pawpal.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/email_sent"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
