<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/step1_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@mipmap/horizontal_small_strip" />

                <ImageView
                    android:layout_width="68dp"
                    android:layout_height="28dp"
                    android:layout_gravity="right|center"
                    android:src="@mipmap/pp_icon" />

                <com.org.pawpal.custom.CustomTextView
                    android:id="@+id/tv_create"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <com.org.pawpal.custom.CustomTextView
                android:id="@+id/tv_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/step1"
                android:textColor="@color/light_blue_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.org.pawpal.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="@color/green_normal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/step1_active" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/step2" />

            </LinearLayout>


            <com.org.pawpal.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/address"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.org.pawpal.custom.CEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@mipmap/txtfield"
                    android:hint="@string/type_address"
                    android:padding="10dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@color/green_normal"
                    android:text="@string/search"
                    android:textColor="@color/white" />
            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.org.pawpal.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/location_instructions"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.org.pawpal.custom.CEditText
                    android:id="@+id/et_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@mipmap/txtfield"
                    android:gravity="center"
                    android:hint="@string/latitude"
                    android:padding="5dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />

                <com.org.pawpal.custom.CEditText
                    android:id="@+id/et_longt"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@mipmap/txtfield"
                    android:gravity="center"
                    android:hint="@string/longitude"
                    android:padding="5dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/terms"
                android:textColor="@color/dark_gray" />

            <Button
                android:id="@+id/bt_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_green_button"
                android:text="Continue"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ll_step2_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
           >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@mipmap/horizontal_small_strip" />

                <ImageView
                    android:layout_width="68dp"
                    android:layout_height="28dp"
                    android:layout_gravity="right|center"
                    android:src="@mipmap/pp_icon" />

                <com.org.pawpal.custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/step1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@mipmap/step2_active" />
            </LinearLayout>

            <com.org.pawpal.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/step2"
                android:textColor="@color/light_blue_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.org.pawpal.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/confirm_email"
                android:textColor="@color/green_normal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.org.pawpal.custom.CustomTextView
                android:id="@+id/email_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/email_sent"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_green_button"
                android:text="Continue"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>